# des

./: .gitignore  Cargo.toml  Main.fdesguar  Main.sdesguar  PERF.md  QUESTIONS.md  README.md  TODO.md  V4.md  _hooks.rs  a.txt  b.txt  build-features.sh  net.event_count.json  net.output  run-all.sh  tarpaulin-report.html  test-features.sh
benches/: Cargo.toml  basic-runtime.rs  simple-routing-traffic.rs  simple-routing-traffic.yml
cqueue/: Cargo.toml  ISSUES.md
cqueue/benches/: add.rs  main.rs
cqueue/src/: alloc.rs  clinked_list.rs  const_time.rs  lib.rs  linked_list.rs  overflow_heap.rs  tests.rs
cqueue/src/_alloc/: mod.rs  tests.rs
cqueue/src/nightly/: linked_list.rs
des/: Cargo.toml  ISSUES.md
des-macros/: Cargo.toml  ISSUES.md
des-macros-core/: Cargo.toml
des-macros-core/src/: lib.rs  message_body.rs  select.rs  subsystem.rs
des-macros-core/tests/: message_body.rs
des-macros/src/: lib.rs
des/src/: lib.rs  prelude.rs  tracing.rs
des/src/async_sim/: mod.rs
des/src/core/: event.rs  mod.rs  runtime.rs  sim_time.rs
des/src/cqueue/: mod.rs  overflow_heap.rs
des/src/doc/: mod.rs  pingpong_1.rs  pingpong_2.rs  pingpong_3.rs
des/src/logger/: filter.rs  fmt.rs  mod.rs  output.rs  record.rs
des/src/macros/: cfg.rs  event_set.rs  guid.rs  log.rs  mod.rs  registry.rs  select.rs  support.rs  time.rs
des/src/metrics/: internal.rs  mod.rs  outvec.rs  stddev.rs
des/src/ndl/: mod.rs  registry.rs
des/src/net/: channel.rs  design.md  gate.rs  message.rs  mod.rs  packet.rs  par.rs  path.rs  processing.rs  topology.rs  util.rs
des/src/runtime/: bench.rs  builder.rs  core.rs  error.rs  limit.rs  logger.rs  mod.rs  options.rs
des/src/stats/: channel.rs  internal.rs  mean.rs  mod.rs  outvec.rs  stddev.rs
des/src/sync/: atomic.rs  mod.rs  mutex.rs  rwlock.rs  swaplock.rs
des/src/time/: driver.rs  duration.rs  error.rs  interval.rs  mod.rs  sleep.rs  timeout.rs
des/src/tracing/: filter.rs  filter2.rs  format.rs  mod.rs  output.rs  policy.rs  span.rs
des/src/util/: any.rs  macros.rs  mm.rs  mod.rs  ptr.rs
des/tests/: .gitignore  _require_full.rs  async.rs  async_net.rs  async_shutdown.rs  basic-runtime.rs  basic_runtime.rs  builder-async.rs  builder.rs  channels.rs  common.rs  drop-test.rs  hooks.rs  load-order.rs  load_order.ndl  load_order.rs  logger.rs  message_body.rs  meta.rs  module_inheritence.rs  ndl.rs  net.rs  panic.rs  par.rs  plugins.rs  processing.rs  props.rs  select.rs  shutdown.rs  topology.rs  tracing-init.rs  tracing.rs  watcher.rs
des/tests/common/: mock.rs
des/tests/ndl/: ab-deep.ndl  ab-deep.yml  ab.ndl  ab.yml  drop-test.ndl  local-con.ndl  local-con.yml  single.ndl  single.yml  top.ndl  top.yml
des_core/: Cargo.toml
des_core/src/: lib.rs
des_core/src/core/: event.rs  interning.rs  logger.rs  mod.rs  runtime.rs  sim_time.rs
des_core/src/metrics/: internal.rs  mod.rs
des_core/src/misc/: mod.rs
des_core/src/net/: channel.rs  gate.rs  gate_buffer.rs  message.rs  mod.rs  module.rs  packet.rs  runtime.rs
des_core/src/util/: buffer.rs  cell.rs  macros.rs  mm.rs  mod.rs  spmc.rs
des_derive/: Cargo.toml
des_derive/src/: attributes.rs  common.rs  lib.rs  module.rs  module_impl.rs  network_impl.rs  subsystem.rs  subsystem_impl.rs
des_macros/: Cargo.toml  TODO.md
des_macros/src/: attributes.rs  common.rs  lib.rs  message_body.rs  module.rs  subsystem.rs
des_ndl/: Cargo.toml  ISSUES.md
des_ndl/benches/: flamegraph.rs  lex_stage.rs  par_stage.rs  tyc_stage.rs
des_ndl/benches/lex_stage/: example_2.ndl  example_3.ndl  example_4.ndl
des_ndl/benches/par_stage/: example_3.ndl  (+1 more)
des_ndl/examples/: Main.ndl  NetworkNode.ndl  NetworkStack.ndl  Test.ndl
des_ndl/src/: error.rs  lib.rs  loc.rs  resolver.rs  souce.rs  source.rs
des_ndl/tests/: ParTest.ndl
des_template/: Cargo.toml  build.rs
des_template/src/: Main.ndl  main.rs
des_tests/: Cargo.toml  expanded
des_tests/inet/: main.rs  network_node.rs  network_stack.rs  routing_deamon.rs
des_tests/ndl/: Alice.ndl  Main.ndl  alice.rs  main.rs  members.rs
des_tests/net_pingpong/: alice.rs  bob.rs  main.rs
des_tests/par/: main.rs
des_tests/ptrhell/: main.rs  modules.rs
des_tests/rtcore_waiter/: main.rs
des_tests/util/: main.rs  members.rs
des_tests/utils/: main.rs  members.rs
examples/: Cargo.toml  cqueue.rs  multisim.rs  out  waiter.rs
examples/cqueue/: main.rs
examples/droptest/: Main.ndl  main.rs  modules.rs
examples/inet/: main.rs  network_node.rs  network_stack.rs  routing_deamon.rs
examples/macro2/: Main.ndl  main.rs
examples/metrics/: Main.ndl  main.rs
examples/metrics2/: Main.ndl  Main.par  main.rs
examples/multisim/: main.rs
examples/ndl/: Main.ndl  main.rs  main.yml  members.rs
examples/ndl2/: main.ndl  main.rs  main.yml
examples/net/: Main.ndl  Main.par  main.rs
examples/panic/: main.rs
examples/pingpong/: 0-custom-sim.rs  1-net.rs  2-async.rs  alice.rs  bob.rs  main.rs
examples/plugin/: Main.ndl  main.rs  main.yml
examples/proto/: Main.ndl  main.rs
examples/ptrhell/: main.rs  main.yml  modules.rs
examples/test-bin/: main.rs
examples/utils/: Main.ndl  init.par  init.par.yml  main.rs  main.yml  members.rs
examples/waiter/: main.rs
ndl/: Cargo.toml  ISSUES.md  notes.md
ndl/benches/: desugar.rs  full.rs  lexer.rs  parser.rs  tycheck.rs
ndl/src/: common.rs  error.rs  lib.rs  loc.rs  resolver.rs  source.rs
ndl/tests/: ParTest.ndl  test.rs
tests/: Cargo.toml
tests/droptest/: main.rs  modules.rs
tests/events/: main.rs
tests/inet/: main.rs  network_node.rs  network_stack.rs  routing_deamon.rs
tests/macro2/: Main.ndl  main.rs
tests/metrics/: main.rs
tests/ndl/: Main.ndl  main.rs  members.rs
tests/net_pingpong/: alice.rs  bob.rs  main.rs
tests/par/: main.rs
tests/pingpong/: alice.rs  bob.rs  main.rs
tests/proto/: Main.ndl  main.rs
tests/ptrhell/: Main.ndl  main.rs  modules.rs
tests/rtcore_waiter/: main.rs
tests/utils/: Main.ndl  init.par  main.rs  members.rs
tests/waiter/: main.rs
tests_async/: Cargo.toml
tests_async/handle/: Main.ndl  main.rs
tests_async/main/: main.rs
(+564 files in other folders)
