[package]
edition = "2021"
name = "des"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["net"]
net = []
netipv6 = ["net"]

[lib]
name = "dse"
path = "src/lib.rs"

[dependencies]
global_uid = {path = "global_uid"}
lazy_static = "1.4.0"
log = "0.4.14"
num-traits = "0.2"
rand = {version = "*", features = ["std_rng"]}
termcolor = "1.1.2"
