[package]
edition = "2021"
name = "des"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["net"]
net = []
netipv6 = ["net"]

[lib]
name = "dse"
path = "src/lib.rs"

[[bin]]
name = "test_inet"
path = "tests/inet/main.rs"

[[bin]]
name = "test_pingpong"
path = "tests/net_pingpong/main.rs"

[[bin]]
name = "test_waiter"
path = "tests/rtcore_waiter/main.rs"

[[bin]]
name = "ndl"
path = "tests/ndl/main.rs"

[dependencies]
global_uid = {path = "global_uid"}
lazy_static = "1.4.0"
log = "0.4.14"
num-traits = "0.2"
rand = {version = "*", features = ["std_rng"]}
termcolor = "1.1.2"
unicode-xid = "0.2.0"
unic-emoji-char = "0.9.0"