[package]
name = "benches"
version = "0.1.0"
edition = "2021"

[dependencies]
des = { path = "../des", features = ["full"] }
criterion = { version = "*", features = ["html_reports"] }

[[bench]]
name = "basic-runtime"
path = "basic-runtime.rs"
harness = false

[[bench]]
name = "simple-routing-traffic"
path = "simple-routing-traffic.rs"
harness = false
