[package]
name = "cqueue"
version = "0.1.0"
edition = "2021"

[features]
linked_list = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bench]]
name = "main"
harness = false

[dev-dependencies]
criterion = "0.3"
rand = "*"

[dependencies]
num-traits = "0.2.14"