[package]
edition = "2021"
name = "cqueue"
version = "0.1.1"

[features]
optimized = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bench]]
harness = false
name = "main"

[dev-dependencies]
criterion = "0.3"
rand = "*"

[dependencies]
num-traits = "0.2.14"
