[package]
edition = "2021"
name = "des-macros-core"
version = "0.4.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "*"
proc-macro-error = "1.0"
proc-macro2 = "1.0"
quote = "1.0"
syn = {version = "1.0", features = ["full"]}
