[package]
edition = "2021"
name = "des-macros"
version = "0.5.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
des-macros-core = { path = "../des-macros-core" }
proc-macro-error = "1.0"
proc-macro2 = "1.0"
syn = { version = "2.0", features = ["full"] }
quote = "*"
