[package]
authors = ["PetrichorIT <github.com/PetrichorIT>"]
categories = ["simulation", "asynchronous", "network-programming"]
description = """
A simulation backend for discrete event simulations, supporting
simulation of asynchronous systems via tokio.
"""
edition = "2021"
keywords = ["async", "simulation", "tokio", "net"]
license = "MIT"
name = "des"
readme = "../README.md"
repository = "https://github.com/PetrichorIT/des"
version = "0.5.1"

[features]
# Include nothing by default
default = []

# Include everything used for default test runs.
full = ["net" ,"ndl" , "cqueue", "async", "tracing"]

async = ["net", "dep:tokio", "dep:async-trait"]
cqueue = ["dep:des-cqueue"]
multi-threaded = []
net = ["dep:des-macros"]
ndl = ["dep:des-ndl"]
tracing = ["dep:tracing"]

# Different metrics features
metrics = []
metrics-rt-full = ["metrics"]

[dependencies]
# Rand primives must be set since they are bound to the
# runtime and sould be seedable by the user.
rand = {version = "*", features = ["std_rng"]}
# Sysinfo is used for collection information on 
# system stats for metrics.
sysinfo = "*"

# Spin must be used in the logger event in single-threaded runnin
# due to issues like #8
spin = {version = "*"}

pin-project-lite = "0.2"

# All other dependencies are optional

async-trait = {version = "0.1", optional = true}
tokio = { version = "*", features = ["rt", "sync", "macros", "io-util"], optional = true}
tracing = { version = "*", optional = true}
termcolor = "*"

des-cqueue = {path = "../des-cqueue", optional = true}
des-macros = {path = "../des-macros", optional = true}
des-ndl = { path = "../des-ndl", optional = true}


[dev-dependencies]
futures = "0.3"
serial_test = "2.0.0"

[package.metadata.docs.rs]
all-features = true
