[package]
edition = "2021"
name = "des_core"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
net = []
netipv6 = ["net"]
pubinterning = []
simtime_u128 = []
staticgates = []

[dependencies]
lazy_static = "1.4.0"
log = "0.4.14"
num-traits = "0.2"
rand = {version = "*", features = ["std_rng"]}
termcolor = "1.1.2"
unic-emoji-char = "0.9.0"
unicode-xid = "0.2.0"
