[package]
edition = "2021"
name = "des_derive"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc_macro = true

[dependencies]
ndl = {path = "../ndl"}
lazy_static = "1.4.0"
proc-macro2 = "1.0"
quote = "1.0"
syn = {version = "1.0", features = ["full"]}
proc-macro-error = "1.0.4"