[package]
edition = "2021"
name = "des_macros"
version = "0.3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc_macro = true

[dependencies]
lazy_static = "*"
ndl = {path = "../ndl"}
proc-macro-error = "1.0"
proc-macro2 = "1.0"
quote = "1.0"
syn = {version = "1.0", features = ["full"]}
