[package]
edition = "2021"
name = "des_macros"
version = "0.4.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc_macro = true

[dependencies]
des_macros_core = {path = "../des_macros_core"}
proc-macro-error = "1.0"
proc-macro2 = "1.0"
syn = {version = "1.0", features = ["full"]}
