[package]
edition = "2021"
name = "des_ndl"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bench]]
harness = false
name = "lex_stage"

[[bench]]
harness = false
name = "par_stage"

[[bench]]
harness = false
name = "tyc_stage"

[[bench]]
harness = false
name = "flamegraph"

[dependencies]
bench_utils = {path = "../bench_utils"}
log = "0.4.14"
termcolor = "1.1.2"
unic-emoji-char = "0.9.0"
unicode-xid = "0.2.0"
