[package]
edition = "2021"
name = "des_tests"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "net"
path = "inet/main.rs"

[[bin]]
name = "pingpong"
path = "net_pingpong/main.rs"

[[bin]]
name = "waiter"
path = "rtcore_waiter/main.rs"

[[bin]]
name = "ndl"
path = "ndl/main.rs"

[[bin]]
name = "util"
path = "util/main.rs"

[dependencies]
des_core = {path = "../des_core"}
des_macros = {path = "../des_macros"}
des_ndl = {path = "../des_ndl"}
log = {version = "*"}
# log = "*"
rand = "*"
util = {path = "../util"}
util_macros = {path = "../util_macros"}
