[package]
edition = "2021"
name = "examples"
version = "0.1.0"

# See more keys and their definitions at https://doc.ruslang.org/cargo/reference/manifest.html


[dev-dependencies]
des = { path = "../des", features = ["full"] }
rand = "*"
tracing = "*"
tokio = "*"

[[example]]
name = "pingpong-custom-sim"
path = "pingpong/0-custom-sim.rs"

[[example]]
name = "pingpong-net"
path = "pingpong/1-net.rs"

[[example]]
name = "pingpong-async"
path = "pingpong/2-async.rs"


[[example]]
name = "waiter"
path = "waiter.rs"

[[example]]
name = "ndl"
path = "ndl/main.rs"

[[example]]
name = "utils"
path = "utils/main.rs"

[[example]]
name = "ptrhell"
path = "ptrhell/main.rs"

[[example]]
name = "cqueue"
path = "cqueue.rs"

[[example]]
name = "multisim"
path = "multisim.rs"

[[example]]
name = "plugin"
path = "plugin/main.rs"

[[example]]
name = "ndl2"
path = "ndl2/main.rs"

[[example]]
name = "panic"
path = "panic/main.rs"
