[package]
edition = "2021"
name = "ndl"
version = "0.2.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[[bin]]
name = "ndl"
path = "bin/main.rs"

[[test]]
name = "ndl-test"
path = "tests/test.rs"

[[bench]]
name = "lexer"
harness = false

[[bench]]
name = "parser"
harness = false

[[bench]]
name = "desugar"
harness = false

[[bench]]
name = "tycheck"
harness = false

[[bench]]
name = "full"
harness = false

[dev-dependencies]
criterion = "0.3"

[dependencies]
structopt = "0.3.26"
log = "0.4.14"
termcolor = "1.1.2"
unic-emoji-char = "0.9.0"
unicode-xid = "0.2.0"
