[package]
edition = "2021"
name = "ndl"
version = "0.2.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "ndl"
path = "bin/main.rs"

[[test]]
name = "ndl-test"
path = "tests/test.rs"

[[bench]]
harness = false
name = "lexer"

[[bench]]
harness = false
name = "parser"

[[bench]]
harness = false
name = "desugar"

[[bench]]
harness = false
name = "tycheck"

[[bench]]
harness = false
name = "full"

[dev-dependencies]
criterion = "0.4"

[dependencies]
structopt = "0.3"
termcolor = "1"
unic-emoji-char = "0.9"
unicode-xid = "0.2"
