[package]
edition = "2021"
name = "tests"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "ta-main"
path = "main/main.rs"

[dependencies]
des = {path = "../des", features = ["net", "async"]}
#  des_derive = {path = "../des_derive"}
log = {version = "*", features = ["max_level_warn", "release_max_level_warn"]}
ndl = {path = "../ndl"}
# log = "*"
lazy_static = "*"
rand = "*"
tokio = "*"
